cluster/apps/monitoring/prometheus-exporter/fritzbox-exporter/fritzbox-exporter-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fritzbox-exporter
  namespace: monitoring
  labels:
    app: fritzbox-exporter
spec:
  selector:
    app: fritzbox-exporter
  type: ClusterIP
  ports:
  - name: http-exporter
    port: 9042
    protocol: TCP
    targetPort: http-exporter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fritzbox-exporter
  namespace: monitoring
  labels:
    app: fritzbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fritzbox-exporter
  template:
    metadata:
      labels:
        app: fritzbox-exporter
    spec:
      nodeSelector:
        node-type: worker
      containers:
      - name: fritzbox-exporter
        image: alexxanddr/fritzbox-exporter:latest
        ports:
        - name: http-exporter
          containerPort: 9042
          protocol: TCP
