cluster/apps/monitoring/prometheus-exporter/fritzbox-exporter/fritzbox-exporter-ingressroute.yaml
# speedtest-metrics-local-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fritzbox-metrics-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fritzbox-exporter.${SECRET_DOMAIN_LOCAL_02}`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: fritzbox-exporter
          port: 9042
